testdata/baselines/reference/submodule/conformance/namespaceAssignmentToRequireAlias.errors.txt
bug40140.js(2,3): error TS2339: Property 'assignment' does not exist on type '{}'.
bug40140.js(3,3): error TS2339: Property 'noError' does not exist on type '{}'.


==== bug40140.js (2 errors) ====
    const u = require('untyped');
    u.assignment.nested = true
      ~~~~~~~~~~
!!! error TS2339: Property 'assignment' does not exist on type '{}'.
    u.noError()
      ~~~~~~~
!!! error TS2339: Property 'noError' does not exist on type '{}'.
    
    
==== node_modules/untyped/index.js (0 errors) ====
    module.exports = {}
    